<resources>
    <string name="app_name">ChatsApp</string>
    <string name="login_title">Verify Your Phone Number</string>
    <string name="login_description">ChatsApp will send an SMS message to verify your phone number. Enter your Country code and phone number</string>
    <string name="code">Enter Code</string>
    <string name="button_send">Send Code</string>
    <string name="phoneNumber">Enter Phone Number</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">Name</string>
    <string name="user_phone">Phone</string>
    <string name="user_status">Status</string>
    <string name="user_Message">Message</string>
    <string name="chat_title">Title</string>
    <string name="message_hint">Type your message here</string>
    <string name="button_message">Send</string>
    <string name="button_media">Media</string>
    <string name="items_selected">0 items selected</string>
    <string name="option_create">Create</string>
    <string name="profile_username">Enter a Username</string>
    <string name="profile_status">Enter a Profile Status</string>
    <string name="button_update">Update Profile</string>
    <string name="button_verify">Verify Code</string>
    <string name="button_camera">Open Camera</string>
    <string name="create_chatroom">Create Chat Room</string>
    <string name="button_view_media">View Image</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
